Adjusted codes, finished product on spirits and beers

--- a/Main file.ipynb
+++ b/Main file.ipynb
@@ -810,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#How to define the best chance of get a beer is based off "
+    "#How to define the best chance of get a beer is based off the (R/RC)/Price of Beer"
    ]
   },
   {
