Finish previous commit

--- a/Main file.ipynb
+++ b/Main file.ipynb
@@ -810,7 +810,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#How to define the best chance of get a beer is based off the (R/RC)/Price of Beer"
+    "#How to define the best chance of get a beer is based off the (R/RC)/Price of Beer to have a quantitative number to define how much money you spend per \"star/1 rating\". For beer that is 1 dollar to .299 stars."
    ]
   },
   {
@@ -988,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Which were the most liked Spirits?"
+    "#How to define the best chance of get a spirit is based off the (R/RC)/Price of Spirit to have a quantitative number to define how much money you spend per \"star/1 rating\". For spirits that is 1 dollar to .001 stars."
    ]
   },
   {
@@ -1050,7 +1050,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Write code to find the Average ABV/ABV's of the Wine\n",
+    "#Write code to find the Average ABV of the Wine\n",
     "#CODE HERE"
    ]
   },
